--- a/package.json
+++ b/package.json
@@ -3,9 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^12.0.0",
-    "@testing-library/user-event": "^12.1.10",
     "core-js": "^3.16.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -14,8 +11,7 @@
     "react-scripts": "4.0.3",
     "redux": "^4.1.0",
     "redux-thunk": "^2.3.0",
-    "regenerator-runtime": "^0.13.9",
-    "web-vitals": "^1.0.1"
+    "regenerator-runtime": "^0.13.9"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -43,7 +39,16 @@
   "devDependencies": {
     "@babel/core": "^7.14.8",
     "@babel/preset-env": "^7.14.9",
-    "babel-jest": "^27.0.6",
-    "jest": "^27.0.6"
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.0.0",
+    "@testing-library/user-event": "^13.2.1",
+    "babel-jest": "26.6.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "26.6.0"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "\\.(css)$": "identity-obj-proxy"
+    }
   }
 }
