--- a/package.json
+++ b/package.json
@@ -41,10 +41,12 @@
     "@babel/preset-env": "^7.14.9",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
+    "@testing-library/react-hooks": "^7.0.1",
     "@testing-library/user-event": "^13.2.1",
     "babel-jest": "26.6.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "26.6.0"
+    "jest": "26.6.0",
+    "react-test-renderer": "^17.0.2"
   },
   "jest": {
     "moduleNameMapper": {
