--- a/package.json
+++ b/package.json
@@ -43,10 +43,14 @@
     "@testing-library/react": "^12.0.0",
     "@testing-library/react-hooks": "^7.0.1",
     "@testing-library/user-event": "^13.2.1",
+    "@types/react-dom": "^17.0.9",
+    "@types/react-redux": "^7.1.18",
+    "@types/react-router-dom": "^5.1.8",
     "babel-jest": "26.6.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "26.6.0",
-    "react-test-renderer": "^17.0.2"
+    "react-test-renderer": "^17.0.2",
+    "typescript": "^4.3.5"
   },
   "jest": {
     "moduleNameMapper": {
